syntax = "proto3";

package agent.v1;

import "agent/v1/cursor_rules.proto";
import "agent/v1/cursor_packages.proto";
import "agent/v1/mcp.proto";
import "agent/v1/repo.proto";
import "agent/v1/selected_context.proto";
import "agent/v1/subagents.proto";

message RequestContextArgs {
  optional string notes_session_id = 2;
  optional string workspace_id = 3;
}

message RequestContextResult {
  oneof result {
    RequestContextSuccess success = 1;
    RequestContextError error = 2;
    RequestContextRejected rejected = 3;
  }
}

message RequestContextSuccess {
  RequestContext request_context = 1;
}

message RequestContextError {
  string error = 1;
}

message RequestContextRejected {
  string reason = 1;
}

message RequestContextEnv {
  string os_version = 1;
  repeated string workspace_paths = 2;
  string shell = 3;
  bool sandbox_enabled = 5;
  string terminals_folder = 7;
  string agent_shared_notes_folder = 8;
  string agent_conversation_notes_folder = 9;
  string time_zone = 10;
  string project_folder = 11;
  string agent_transcripts_folder = 12;
  optional string artifacts_folder = 13;
}

message DebugModeConfig {
  string log_path = 1;
  string server_endpoint = 2;
}

message RequestContext {
  repeated CursorRule rules = 2;
  RequestContextEnv env = 4;
  repeated RepositoryIndexingInfo repository_info = 6;
  repeated McpToolDefinition tools = 7;
  optional string conversation_notes_listing = 8;
  optional string shared_notes_listing = 9;
  repeated GitRepoInfo git_repos = 11;
  repeated LsDirectoryTreeNode project_layouts = 13;
  repeated McpInstructions mcp_instructions = 14;
  optional DebugModeConfig debug_mode_config = 15;
  optional string cloud_rule = 16;
  optional bool web_search_enabled = 17;
  optional SkillOptions skill_options = 18;
  optional bool repository_info_should_query_prod = 19;
  map<string, string> file_contents = 20;
  optional string user_intent_summary = 21;
  repeated CustomSubagent custom_subagents = 22;
  optional McpFileSystemOptions mcp_file_system_options = 23;
  optional bool web_fetch_enabled = 24;
  optional string hooks_additional_context = 25;
  optional string commit_attribution_message = 26;
  optional string pr_attribution_message = 27;
}
